refs/ps/testcases/A3/Testcases/Error/tc16.c
void main()
{
    int a;
    {
        float b;
        read b;
        b = (float) a;
        int c;
        c = (int) b;
    }
}